# rust_tftp

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
libs/: Cargo.toml
libs/src/: lib.rs
server/: Cargo.toml  test.json
server/src/: main.rs
