[package]
name = "rust_tftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tftp_libs]
path = "libs"

[workspace]
members = [
    "client",
    "libs",
    "server"
]

[[bin]]
path = "server/src/main.rs"
name = "server"

[[bin]]
path = "client/src/main.rs"
name = "client"